# udemy-langchain

./: .gitignore  pyproject.toml  udemy_langchain.ipynb
.chroma/index/: id_to_uuid_9db6b5ca-ee7a-477d-a9c5-39de2011c808.pkl  index_metadata_9db6b5ca-ee7a-477d-a9c5-39de2011c808.pkl  uuid_to_id_9db6b5ca-ee7a-477d-a9c5-39de2011c808.pkl
